--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
+    "express": "^4.13.3",
+    "ioredis": "^1.13.1",
     "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "socket.io": "^1.3.7"
   }
 }
